[gd_scene load_steps=13 format=3 uid="uid://ntp4tw7drqts"]

[ext_resource type="Script" uid="uid://plogiwc752c2" path="res://scripts/player/marjorie_player.gd" id="1_enl4u"]
[ext_resource type="PackedScene" uid="uid://brgvbq52hc48r" path="res://scenes/frames/beam_frames.tscn" id="1_ijv0j"]
[ext_resource type="PackedScene" uid="uid://dmjv83ink67f6" path="res://scenes/frames/majorie_frames.tscn" id="1_ynh6t"]
[ext_resource type="PackedScene" uid="uid://cktryo5wbcouh" path="res://scenes/ui/player_ui.tscn" id="3_y2nqa"]
[ext_resource type="AudioStream" uid="uid://c7qkqebcdlwnr" path="res://assets/tracks/xia.field - Level.mp3" id="4_vx0cc"]
[ext_resource type="Script" uid="uid://bcl6uk7o05hr7" path="res://scripts/player/audio.gd" id="5_ht65i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ijv0j"]
size = Vector2(18, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_enl4u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1obkj"]
size = Vector2(20, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t0tph"]
size = Vector2(20, 27.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l8cg3"]
size = Vector2(27, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1f8ad"]
size = Vector2(27, 20)

[node name="MarjoriePlayer" type="CharacterBody2D" groups=["Ally", "Player"]]
scale = Vector2(2, 2)
collision_layer = 3
collision_mask = 3
platform_floor_layers = 4278190080
script = ExtResource("1_enl4u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ijv0j")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_enl4u")
debug_color = Color(0.85882354, 0.27058825, 0.62352943, 0.41960785)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="AttackUpHitbox" type="Area2D" parent="." groups=["AllyDamageSource", "Player"]]
collision_layer = 2
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackUpHitbox"]
position = Vector2(0, -23.5)
shape = SubResource("RectangleShape2D_1obkj")
disabled = true

[node name="Frames" parent="AttackUpHitbox" instance=ExtResource("1_ijv0j")]
visible = false
position = Vector2(0, -24)
animation = &"beam_v"

[node name="AttackDownHitbox" type="Area2D" parent="." groups=["AllyDamageSource", "Player"]]
collision_layer = 2
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDownHitbox"]
position = Vector2(0, 23.75)
shape = SubResource("RectangleShape2D_t0tph")
disabled = true

[node name="Frames" parent="AttackDownHitbox" instance=ExtResource("1_ijv0j")]
visible = false
position = Vector2(0, 24)
animation = &"beam_v"
flip_v = true

[node name="AttackRightHitbox" type="Area2D" parent="." groups=["AllyDamageSource", "Player"]]
collision_layer = 2
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRightHitbox"]
position = Vector2(23.5, 0)
shape = SubResource("RectangleShape2D_l8cg3")
disabled = true

[node name="Frames" parent="AttackRightHitbox" instance=ExtResource("1_ijv0j")]
visible = false
position = Vector2(24, 0)
flip_h = true

[node name="AttackLeftHitbox" type="Area2D" parent="." groups=["AllyDamageSource", "Player"]]
collision_layer = 2
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackLeftHitbox"]
position = Vector2(-23.5, 0)
shape = SubResource("RectangleShape2D_1f8ad")
disabled = true

[node name="Frames" parent="AttackLeftHitbox" instance=ExtResource("1_ijv0j")]
visible = false
position = Vector2(-24, 0)

[node name="Frames" parent="." instance=ExtResource("1_ynh6t")]
animation = &"walk_down"

[node name="PlayerUI" parent="." instance=ExtResource("3_y2nqa")]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_vx0cc")
volume_db = -10.0
autoplay = true
script = ExtResource("5_ht65i")

[node name="Timer" type="Timer" parent="AudioStreamPlayer"]
wait_time = 104.0
autostart = true

[connection signal="finished" from="AudioStreamPlayer" to="AudioStreamPlayer" method="_on_finished"]
